--- a/vue-slider-markup-base/index.html
+++ b/vue-slider-markup-base/index.html
@@ -5,54 +5,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Slider</title>
+    <title>Vue Slider</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
 
     <div id="app">
-
         <div class="container">
-            <div class="slider-wrapper" tabindex="0">
+            <div class="row">
+                <div class="col-12">
+                    <div class="content slider-wrapper">
+                        <div class="item">
+                            <img :src="slides[active_image].image" :alt="slides[active_image].title">
+                            <div class="text">
+                                <h3>
+                                    {{slides[active_image].title}}
+                                </h3>
+                                <p>
+                                    {{slides[active_image].text}}
+                                </p>
+                            </div>
+                        </div>
+                        <div class="thumbs">
+                            <div class="prev"></div>
+                            <div class="next"></div>
+                            <div class="thumb active">
+                                <img src="img/01.webp" alt="Svezia" />
+                            </div>
+                            <div class="thumb">
+                                <img src="img/02.webp" alt="Ratchet & Clank" />
+                            </div>
+                            <div class="thumb">
+                                <img src="img/03.webp" alt="Fortnite" />
+                            </div>
+                            <div class="thumb">
+                                <img src="img/04.webp" alt="Stray" />
+                            </div>
+                            <div class="thumb">
+                                <img src="img/05.webp" alt="Avengers" />
+                            </div>
+                        </div>
 
-                <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
-                    <div class="text">
-                        <h3>Spiderman</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
-                        </p>
                     </div>
                 </div>
-
-                <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.webp" alt="Ratchet & Clank" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.webp" alt="Fortnite" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.webp" alt="Stray" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.webp" alt="Avengers" />
-                    </div>
-                </div>
-
             </div>
         </div>
-
     </div>
+
+    <!-- <div class="container">
+        <div class="slider-wrapper" tabindex="0">
+
+            <div class="item">
+                <img src="img/01.webp" alt="Spiderman" />
+                <div class="text">
+                    <h3>Spiderman</h3>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
+                        tempore aliquid deleniti aut
+                        veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
+                        corporis.
+                    </p>
+                </div>
+            </div>
+
+            <div class="thumbs">
+                <div class="prev"></div>
+                <div class="next"></div>
+                <div class="thumb active">
+                    <img src="img/01.webp" alt="Svezia" />
+                </div>
+                <div class="thumb">
+                    <img src="img/02.webp" alt="Ratchet & Clank" />
+                </div>
+                <div class="thumb">
+                    <img src="img/03.webp" alt="Fortnite" />
+                </div>
+                <div class="thumb">
+                    <img src="img/04.webp" alt="Stray" />
+                </div>
+                <div class="thumb">
+                    <img src="img/05.webp" alt="Avengers" />
+                </div>
+            </div>
+
+        </div>
+    </div> -->
 
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
     <script src="./js/script.js"></script>
