--- a/vue-slider-markup-base/index.html
+++ b/vue-slider-markup-base/index.html
@@ -30,8 +30,8 @@
                             </div>
                         </div>
                         <div class="thumbs">
-                            <div class="prev"></div>
-                            <div class="next"></div>
+                            <div class="prev" @click="prevImage()"></div>
+                            <div class="next" @click="nextImage()"></div>
                             <div class="thumb active">
                                 <img src="img/01.webp" alt="Svezia" />
                             </div>
