--- a/vue-slider-markup-base/index.html
+++ b/vue-slider-markup-base/index.html
@@ -20,7 +20,7 @@
                     <div class="content slider-wrapper">
                         <div class="item">
                             <img :src="slides[active_image].image" :alt="slides[active_image].title">
-                            <div class="text">
+                            <div class="text bg-gray">
                                 <h3>
                                     {{slides[active_image].title}}
                                 </h3>
@@ -32,20 +32,8 @@
                         <div class="thumbs">
                             <div class="prev" @click="prevImage()"></div>
                             <div class="next" @click="nextImage()"></div>
-                            <div class="thumb active">
-                                <img src="img/01.webp" alt="Svezia" />
-                            </div>
-                            <div class="thumb">
-                                <img src="img/02.webp" alt="Ratchet & Clank" />
-                            </div>
-                            <div class="thumb">
-                                <img src="img/03.webp" alt="Fortnite" />
-                            </div>
-                            <div class="thumb">
-                                <img src="img/04.webp" alt="Stray" />
-                            </div>
-                            <div class="thumb">
-                                <img src="img/05.webp" alt="Avengers" />
+                            <div class="thumb" v-for="(elem, i) in slides" :class="active_image == i ? 'active':''">
+                                <img :src="elem.image" :alt="'thumb' + elem.title">
                             </div>
                         </div>
 
@@ -55,44 +43,6 @@
         </div>
     </div>
 
-    <!-- <div class="container">
-        <div class="slider-wrapper" tabindex="0">
-
-            <div class="item">
-                <img src="img/01.webp" alt="Spiderman" />
-                <div class="text">
-                    <h3>Spiderman</h3>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                        tempore aliquid deleniti aut
-                        veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                        corporis.
-                    </p>
-                </div>
-            </div>
-
-            <div class="thumbs">
-                <div class="prev"></div>
-                <div class="next"></div>
-                <div class="thumb active">
-                    <img src="img/01.webp" alt="Svezia" />
-                </div>
-                <div class="thumb">
-                    <img src="img/02.webp" alt="Ratchet & Clank" />
-                </div>
-                <div class="thumb">
-                    <img src="img/03.webp" alt="Fortnite" />
-                </div>
-                <div class="thumb">
-                    <img src="img/04.webp" alt="Stray" />
-                </div>
-                <div class="thumb">
-                    <img src="img/05.webp" alt="Avengers" />
-                </div>
-            </div>
-
-        </div>
-    </div> -->
 
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
     <script src="./js/script.js"></script>
