--- a/vue-slider-markup-base/bonus/index.html
+++ b/vue-slider-markup-base/bonus/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="content slider-wrapper" @mouseover="stopAutoScroll" @mouseleave="autoScroll">
+                    <div class="content slider-wrapper" @mouseover="stopAutoScroll()" @mouseleave="autoScroll()">
                         <div class="item">
                             <img :src="slides[active_image].image" :alt="slides[active_image].title">
                             <div class="text bg-gray">
